Fixed stupid overlap bug.

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -91,6 +91,7 @@ a {
 
   background-color: white;
   font-family: HelveticaNeue;
+  line-height: 50px;
 
   #brand {
     display: inline-block;
@@ -122,6 +123,8 @@ a {
     border:1px solid @hover;
     color: @dark;
     .border-radius(10px);
+
+    line-height: normal;
 
     &:before {
       content:"";
